// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostPreviewCard - Snapshots > matches snapshot with children 1`] = `
<div
  class="flex flex-col gap-4 p-6"
  data-testid="card-content"
>
  <div
    data-post-id="snapshot-post-id"
    data-testid="post-header"
  >
    PostHeader 
    snapshot-post-id
  </div>
  <div
    data-post-id="snapshot-post-id"
    data-testid="post-content"
  >
    PostContent 
    snapshot-post-id
  </div>
  <div>
    Footer content
  </div>
</div>
`;

exports[`PostPreviewCard - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex flex-col gap-4 p-6"
  data-testid="card-content"
>
  <div
    data-post-id="snapshot-post-id"
    data-testid="post-header"
  >
    PostHeader 
    snapshot-post-id
  </div>
  <div
    data-post-id="snapshot-post-id"
    data-testid="post-content"
  >
    PostContent 
    snapshot-post-id
  </div>
</div>
`;
